--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -23,7 +23,7 @@
 	
 
     <blockquote>
-      <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
+      <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "http://cp91279.biography.com/1000509261001/1000509261001_2050821238001_Bio-Biography-Tupac-Shakur-SF.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
       "The <a href = "https://www.fourmilab.ch/babbage/sketch.html">Analytical
       Engine</a> has no pretensions whatever to <i>originate</i>
